--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
   "name": "websnap",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "dependencies": {
-    "sass-bootstrap": "~3.0.0",
+    "bootstrap": "~3.0.0",
     "jquery": "~1.9.0",
     "underscore": "~1.4.3",
     "backbone": "~1.0.0",
